// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "height": 300,
      },
      undefined,
    ]
  }
>
  <Video
    controls={false}
    paused={true}
    source={
      Object {
        "uri": "testVideo.mp4",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="ControlsWrap"
  >
    <SvgMock />
  </View>
</View>
`;

exports[`renders with delete button 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "height": 300,
      },
      Object {
        "height": 1000,
      },
    ]
  }
>
  <Video
    controls={false}
    paused={true}
    source={
      Object {
        "uri": "testVideo.mp4",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="ControlsWrap"
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FF5532",
          "borderRadius": 18,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 16,
          "top": 16,
          "width": 40,
        }
      }
      testID="DeleteButton"
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "backgroundColor": "#00000066",
            "borderRadius": 32,
            "height": 64,
            "justifyContent": "center",
            "margin": 16,
            "paddingLeft": 24,
            "width": 64,
          }
        }
      >
        <SvgMock />
      </View>
    </View>
    <SvgMock />
  </View>
</View>
`;

exports[`renders with style 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "height": 300,
      },
      Object {
        "height": 1000,
      },
    ]
  }
>
  <Video
    controls={false}
    paused={true}
    source={
      Object {
        "uri": "testVideo.mp4",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="ControlsWrap"
  >
    <SvgMock />
  </View>
</View>
`;

exports[`renders with width 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "height": 1600,
      },
      undefined,
    ]
  }
>
  <Video
    controls={false}
    paused={true}
    source={
      Object {
        "uri": "testVideo.mp4",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="ControlsWrap"
  >
    <SvgMock />
  </View>
</View>
`;
